Cambios de visuales de Pastelería

--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -5,14 +5,14 @@
                 <i class="bi bi-envelope fs-1 text-primary me-3"></i>
                 <div class="text-start">
                     <h6 class="text-uppercase mb-1">Nuestro mail</h6>
-                    <span>byronjutzutz@pasteles.com</span>
+                    <span>cookie@pastelesonline.com</span>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 text-center bg-primary border-inner py-3">
             <div class="d-inline-flex align-items-center justify-content-center">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>Pastelería HappyCake</h1>
+                    <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>Pastelería Cookie</h1>
                 </a>
             </div>
         </div>
@@ -21,7 +21,7 @@
                 <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
                 <div class="text-start">
                     <h6 class="text-uppercase mb-1">Llámanos</h6>
-                    <span>+502 1234-5678</span>
+                    <span>+502 4970-1580</span>
                 </div>
             </div>
         </div>
