cambios pasteles, personalizados

--- a/src/app/modules/main/home/home.component.html
+++ b/src/app/modules/main/home/home.component.html
@@ -312,11 +312,11 @@
                           <div class="d-flex h-100">
                               <div class="flex-shrink-0">
                                   <img class="img-fluid" src="../../../../assets/img/Rustic1.jpg" alt="" style="width: 150px; height: 85px;">
-                                  <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
+                                  <h4 class="bg-dark text-primary p-2 m-0">$60.00</h4>
                               </div>
                               <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
                                   <h5 class="text-uppercase">Melocoton</h5>
-                                  <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo</span>
+                                  <span>esquisito pastel cubierto con un delicioso chocolate tradicional de chivarabal. </span>
                               </div>
                           </div>
                       </div>
@@ -324,11 +324,11 @@
                           <div class="d-flex h-100">
                               <div class="flex-shrink-0">
                                   <img class="img-fluid" src="../../../../assets/img/rustic2.jpg" alt="" style="width: 150px; height: 85px;">
-                                  <h4 class="bg-dark text-primary p-2 m-0">$50.00</h4>
+                                  <h4 class="bg-dark text-primary p-2 m-0">$75.00</h4>
                               </div>
                               <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
                                   <h5 class="text-uppercase">Vainilla</h5>
-                                  <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo</span>
+                                  <span>Delicioso pastel de vainilla con diferentes ingredientes del frio de Tecpán</span>
                               </div>
                           </div>
                       </div>
@@ -336,11 +336,11 @@
                           <div class="d-flex h-100">
                               <div class="flex-shrink-0">
                                   <img class="img-fluid" src="../../../../assets/img/rustic3.jpg" alt="" style="width: 150px; height: 85px;">
-                                  <h4 class="bg-dark text-primary p-2 m-0">$58.00</h4>
+                                  <h4 class="bg-dark text-primary p-2 m-0">$55.00</h4>
                               </div>
                               <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
                                   <h5 class="text-uppercase">Blanco</h5>
-                                  <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo</span>
+                                  <span>esquisito sabor de 3 leches con un toque de las afueras de xetonox en Tecpán</span>
                               </div>
                           </div>
                       </div>
@@ -348,11 +348,11 @@
                           <div class="d-flex h-100">
                               <div class="flex-shrink-0">
                                   <img class="img-fluid" src="../../../../assets/img/rustic4.jpg" alt="" style="width: 150px; height: 85px;">
-                                  <h4 class="bg-dark text-primary p-2 m-0">$99.00</h4>
+                                  <h4 class="bg-dark text-primary p-2 m-0">$80.00</h4>
                               </div>
                               <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
                                   <h5 class="text-uppercase">Coffe</h5>
-                                  <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo</span>
+                                  <span>Pastel de cafe con un toque artesanal de nuestro querido Mixco, tierra de boxeadores.</span>
                               </div>
                           </div>
                       </div>
@@ -360,11 +360,11 @@
                           <div class="d-flex h-100">
                               <div class="flex-shrink-0">
                                   <img class="img-fluid" src="../../../../assets/img/rustic5.jpg" alt="" style="width: 150px; height: 85px;">
-                                  <h4 class="bg-dark text-primary p-2 m-0">$70.00</h4>
+                                  <h4 class="bg-dark text-primary p-2 m-0">$25.00</h4>
                               </div>
                               <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
                                   <h5 class="text-uppercase">Frambuesa</h5>
-                                  <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo</span>
+                                  <span>Pastel cubierto con jalea artesanal hecha con un toque magistral de nuestros artesanos tecpanecos</span>
                               </div>
                           </div>
                       </div>
@@ -372,11 +372,11 @@
                           <div class="d-flex h-100">
                               <div class="flex-shrink-0">
                                   <img class="img-fluid" src="../../../../assets/img/rustic6.jpg" alt="" style="width: 150px; height: 85px;">
-                                  <h4 class="bg-dark text-primary p-2 m-0">$49.00</h4>
+                                  <h4 class="bg-dark text-primary p-2 m-0">$80.00</h4>
                               </div>
                               <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
                                   <h5 class="text-uppercase">Frambuesa</h5>
-                                  <span>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo</span>
+                                  <span>Pastel con toque hogareño al estilo suizo.</span>
                               </div>
                           </div>
                       </div>
@@ -395,28 +395,28 @@
       <div class="row g-5">
           <div class="col-lg-4 col-md-6">
               <div class="bg-primary border-inner text-center text-white p-5">
-                  <h4 class="text-uppercase mb-3">Birthday Cake</h4>
-                  <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
-                  <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                  <h4 class="text-uppercase mb-3">Pastel de cumpleaños</h4>
+                  <p>Pasteles personalizados de distintos personajes ficticios para el gusto de todos los clientes.</p>
+                  <a class="text-uppercase text-dark" href="">Leer mas <i class="bi bi-arrow-right"></i></a>
               </div>
           </div>
           <div class="col-lg-4 col-md-6">
               <div class="bg-primary border-inner text-center text-white p-5">
-                  <h4 class="text-uppercase mb-3">Wedding Cake</h4>
-                  <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
-                  <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                  <h4 class="text-uppercase mb-3">Pastel de Boda</h4>
+                  <p>Pasteles decorados para cualquier tipo de boda y vayan relacionados con la tematica de cada pareja.</p>
+                  <a class="text-uppercase text-dark" href="">Leer mas <i class="bi bi-arrow-right"></i></a>
               </div>
           </div>
           <div class="col-lg-4 col-md-6">
               <div class="bg-primary border-inner text-center text-white p-5">
-                  <h4 class="text-uppercase mb-3">Custom Cake</h4>
-                  <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
-                  <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
+                  <h4 class="text-uppercase mb-3">Pasteles personalizados</h4>
+                  <p>Pasteles creados a gusto de cada imaginacion de nuestros diferentes clientes.</p>
+                  <a class="text-uppercase text-dark" href="">Leer mas <i class="bi bi-arrow-right"></i></a>
               </div>
           </div>
           <div class="col-lg-12 col-md-6 text-center">
-              <h1 class="text-uppercase text-light mb-4">30% Discount For This Summer</h1>
-              <a href="" class="btn btn-primary border-inner py-3 px-5">Order Now</a>
+              <h1 class="text-uppercase text-light mb-4">25% Diferentes descuentos de temporada</h1>
+              <a href="" class="btn btn-primary border-inner py-3 px-5">Ordenar ahora</a>
           </div>
       </div>
   </div>
