--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,188 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
-    <a href="" class="navbar-brand d-block d-lg-none">
-        <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-primary me-3"></i>COKIEEZONE</h1>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav ms-auto mx-lg-auto py-0">
-            <a *ngFor="let menu of menus" [routerLink]="menu.route" routerLinkActive="active" class="nav-item nav-link">{{menu.name}}</a>
-        </div>
+<nav
+  class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0"
+>
+  <a href="" class="navbar-brand d-block d-lg-none">
+    <h1 class="m-0 text-uppercase text-white">
+      <i class="fa fa-birthday-cake fs-1 text-primary me-3"></i>COKIEEZONE
+    </h1>
+  </a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarCollapse"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <div class="navbar-nav ms-auto mx-lg-auto py-0">
+      <a
+        *ngFor="let menu of menus"
+        [routerLink]="menu.route"
+        routerLinkActive="active"
+        class="nav-item nav-link"
+        >{{ menu.name }}</a
+      >
     </div>
+  </div>
+  <div class="d-flex">
+    <button
+      class="btn btn-primary btn-round"
+      data-bs-toggle="modal"
+      data-bs-target="#cartModal"
+    >
+      <i class="bi bi-cart"></i> Ver carrito
+    </button>
+  </div>
 </nav>
+
+<div
+  class="modal fade"
+  id="cartModal"
+  tabindex="-1"
+  aria-labelledby="cartmodal"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="container mt-5 p-3 rounded cart">
+          <div class="row no-gutters">
+            <div class="col-md-8">
+              <div class="product-details mr-2" *ngIf="items.length > 0">
+                <hr />
+                <h4 class="mb-0">Productos</h4>
+                <div class="d-flex justify-content-between">
+                  <span>Tiene {{items.length}} producto(s) en su carrito</span>
+                </div>
+                <div
+                  class="d-flex justify-content-between align-items-center mt-3 p-2 items rounded" *ngFor="let p of items">
+                  <div class="d-flex flex-row">
+                    <img
+                      class="rounded"
+                      [src]="p.image"
+                      width="80"
+                    />
+                    <div class="ml-2">
+                      <span class="font-weight-bold d-block">{{p.name}}</span
+                      ><span class="spec">{{p.description}}</span>
+                    </div>
+                  </div>
+                  <div class="d-flex flex-row align-items-center">
+                    <span class="d-block ml-5 font-weight-bold">{{p.price | currency:'Q':true:'2.2-2'}}</span
+                    ><i class="fa fa-trash-o ml-3 text-black-50"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="payment-info primary">
+                <div class="d-flex justify-content-between align-items-center">
+                  <span>Detalles de pago</span>
+                </div>
+                <span class="type d-block mt-3 mb-1">Método de pago</span
+                ><label class="radio">
+                  <input type="radio" name="card" value="payment" checked />
+                  <span
+                    ><img
+                      width="30"
+                      src="https://img.icons8.com/color/48/000000/mastercard.png"
+                  /></span>
+                </label>
+
+                <label class="radio">
+                  <input type="radio" name="card" value="payment" />
+                  <span
+                    ><img
+                      width="30"
+                      src="https://img.icons8.com/officel/48/000000/visa.png"
+                  /></span>
+                </label>
+
+                <label class="radio">
+                  <input type="radio" name="card" value="payment" />
+                  <span
+                    ><img
+                      width="30"
+                      src="https://img.icons8.com/ultraviolet/48/000000/amex.png"
+                  /></span>
+                </label>
+
+                <label class="radio">
+                  <input type="radio" name="card" value="payment" />
+                  <span
+                    ><img
+                      width="30"
+                      src="https://img.icons8.com/officel/48/000000/paypal.png"
+                  /></span>
+                </label>
+                <div>
+                  <label class="credit-card-label">Nombre en tarjeta</label
+                  ><input
+                    type="text"
+                    class="form-control credit-inputs"
+                    placeholder="Name"
+                  />
+                </div>
+                <div>
+                  <label class="credit-card-label">No. tarjeta</label
+                  ><input
+                    type="text"
+                    class="form-control credit-inputs"
+                    placeholder="0000 0000 0000 0000"
+                  />
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <label class="credit-card-label">Date</label
+                    ><input
+                      type="text"
+                      class="form-control credit-inputs"
+                      placeholder="12/24"
+                    />
+                  </div>
+                  <div class="col-md-6">
+                    <label class="credit-card-label">CVV</label
+                    ><input
+                      type="text"
+                      class="form-control credit-inputs"
+                      placeholder="342"
+                    />
+                  </div>
+                </div>
+                <hr class="line" />
+                <div class="d-flex justify-content-between information">
+                  <span>Subtotal</span><span>$3000.00</span>
+                </div>
+                <div class="d-flex justify-content-between information">
+                  <span>Shipping</span><span>$20.00</span>
+                </div>
+                <div class="d-flex justify-content-between information">
+                  <span>Total(Incl. taxes)</span><span>$3020.00</span>
+                </div>
+                <button
+                  class="btn btn-info btn-block d-flex justify-content-between mt-3"
+                  type="button" (click)="payCart()"
+                >
+                  <span>Pagar: &nbsp;</span
+                  ><span
+                    > Q200.00<i class="fa fa-long-arrow-right ml-1"></i
+                  ></span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
