--- a/src/app/modules/main/search/search.component.html
+++ b/src/app/modules/main/search/search.component.html
@@ -66,7 +66,10 @@
                                 <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
                                     <h5 class="text-uppercase">{{cake.name}}</h5>
                                     <span>{{cake.description}}</span>
-                                    <span>{{cake.stock}} unidades disponibles</span>
+                                    <span>Stock {{cake.stock}}</span>
+                                    <button class="btn btn-primary btn-round" (click)="addToCart(cake)" [disabled]="cake.stock < 1">
+                                      <i class="bi bi-cart"></i> Agregar al carrito
+                                    </button>
                                 </div>
                             </div>
                         </div>
