integración de catalogos y busquedas con cambios de miriam

--- a/src/app/modules/main/menu/menu.component.html
+++ b/src/app/modules/main/menu/menu.component.html
@@ -1,1 +1,14 @@
-<p>menu works!</p>
+<div class="container-fluid bg-primary py-5 mb-5 hero-header">
+    <div class="container py-5">
+        <div class="row justify-content-start">
+            <div class="col-lg-8 text-center text-lg-start">
+                <h4 class="display-1 text-uppercase text-white mb-4">Nuestro menú</h4>
+                <h1 class="font-secondary text-primary mb-4">Pasteles únicos a nivel nacional</h1>
+                <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
+                    <div class="container">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
