--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -59,8 +59,6 @@
   </div>
   <div class="container-fluid text-secondary py-4" style="background: #111111;">
     <div class="container text-center">
-        <p class="mb-0">&copy; <a class="text-white border-bottom" routerLink="">Cake</a>. Todos los derechos reservados 
-
-  Diseñado por <a class="text-white border-bottom" href="https://htmlcodex.com">Byron Jutzutz</a></p>
+        <p class="mb-0"> MBJE. Todos los derechos reservados </p>
     </div>
   </div>
