--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,23 +16,35 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <div class="navbar-nav ms-auto mx-lg-auto py-0">
-      <a
-        *ngFor="let menu of menus"
+      <li *ngFor="let menu of menus" class="nav-item">
+        <ng-container *ngIf="menu.type === 'simple'; else dropdownTemplate">
+          <a
         [routerLink]="menu.route"
         routerLinkActive="active"
         class="nav-item nav-link"
-        >{{ menu.name }}</a
-      >
+        >{{ menu.name }}</a>
+        </ng-container>
+        <ng-template #dropdownTemplate>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              {{ menu.name }}
+            </a>
+            <ul class="dropdown-menu">
+              <li *ngFor="let child of menu.children">
+                <a class="dropdown-item" [routerLink]="child.route">{{child.name}}</a>
+              </li>
+            </ul>
+          </li>
+        </ng-template>
+      </li>      
     </div>
   </div>
   <div class="d-flex">
-    <button
+    <a routerLink="/main/cart"
       class="btn btn-primary btn-round"
-      data-bs-toggle="modal"
-      data-bs-target="#cartModal"
     >
       <i class="bi bi-cart"></i> Ver carrito
-    </button>
+  </a>
   </div>
 </nav>
 
