--- a/src/app/modules/main/menu/menu.component.html
+++ b/src/app/modules/main/menu/menu.component.html
@@ -6,6 +6,20 @@
                 <h1 class="font-secondary text-primary mb-4">Pasteles únicos a nivel nacional</h1>
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                     <div class="container">
+                        <div class="row g-3">
+                            <div class="col-lg-6">
+                                <div class="d-flex h-100">
+                                    <div class="flex-shrink-0">
+                                        <img class="img-fluid" src="../../../../assets/img/cake-1.jpg" alt="" style="width: 150px; height: 85px;">
+                                        <h4 class="bg-dark text-primary p-2 m-0">$25.00</h4>
+                                    </div>
+                                    <div class="d-flex flex-column justify-content-center text-start bg-secondary border-inner px-4">
+                                        <h5 class="text-uppercase">Tres Leches</h5>
+                                        <span>Delicioso pastel de tres leches cubierto de chocolate blaco con nombre y diseño personalizado</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
