--- a/src/app/modules/main/search/search.component.html
+++ b/src/app/modules/main/search/search.component.html
@@ -9,7 +9,7 @@
                         <form [formGroup]="searchForm">
                           <div class="col-auto">
                             <label for="queryInput" class="visually-hidden">Ingrese su query</label>
-                            <input formControlName="query" type="text" class="form-control" id="queryInput" placeholder="Ejemplo: Horneado y sabor fresa y relleno (chocolate o arequipe)">
+                            <input formControlName="query" (input)="parseQuery()"  type="text" class="form-control" id="queryInput" placeholder="Ejemplo: Horneado y sabor fresa y relleno (chocolate o arequipe)">
                           </div>
                           <div class="col-auto">
                             <button type="submit" autocomplete="false" (click)="applyFilters()" class="btn btn-primary mb-3" [disabled]="!searchForm.valid">Buscar</button>
@@ -66,7 +66,7 @@
         </div>
     </div>
   </div>
-  <div class="container-fluid about py-5" *ngIf="filterForm.touched && filterForm.dirty && cakes && cakes.length == 0">
+  <div class="container-fluid about py-5" *ngIf="searchForm.touched && searchForm.dirty && cakes && cakes.length == 0">
     <div class="container">
         <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
             <h2 class="text-primary font-secondary">Resultados de la búsqueda:</h2>
